<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="14dp"
    android:background="@drawable/bg_dark_card"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="12dp">

    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="86dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textNumber"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:background="@drawable/bg_rank_number"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:text="1" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/label_ranking_title_preview" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:textColor="@color/text_secondary"
            android:textSize="15sp"
            tools:text="@string/label_ranking_desc_preview" />

        <TextView
            android:id="@+id/textHeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/seed"
            android:textSize="16sp"
            tools:text="@string/label_rank_hot_preview" />
    </LinearLayout>
</LinearLayout>
